style.css
body{
  font-family: Arial;
  margin: 0;
  background: pink
  text-align: centre;
}

header{
  background: pink
    color: red, pink;
  padding: 15px;
  border-line: black;
}

nav a{
  color: dark red;
  margin: 10px;
  text-decoration: none;
  font-weight: bold;
}

section{
  padding: 20px;
}

footer{
  background:pink
    color: red;
  padding: 10px;
  margin-top: 20px;
  border-line: black;
}

img{
  width: 250px;
  margin: 10px;
    border-radius: 10px;
}

.profile{
  display: inline-block;
  margin: 15px;
}

